--- a/template/bonus_one.html
+++ b/template/bonus_one.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Predictive Search</title>
 	<link rel="stylesheet" href="bonus_one.css">
+
 </head>
 <body>
 	<h1 class="h1">Predictive Search</h1>
+
 
 	<div class="flexsearch">
 		<div class="flexsearch-wrapper">
@@ -17,6 +19,13 @@
 				</div>
 				<input class="flexsearch-submit" type="submit" value="&#10140;"/>
 			</form>
+
+			<div id="resultBox" visibility="hidden">
+				<ul id="resultList">
+				<li class="item"></li>
+				</ul>
+
+			</div>
 		</div>
 	</div>
 
